apps/applications/tools/mermaid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mermaid
  namespace: default
spec:
  selector:
    matchLabels:
      app: mermaid
  template:
    metadata:
      labels:
        app: mermaid
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: mermaid
          image: ghcr.io/mermaid-js/mermaid-live-editor
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: web-ui
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
