apps/applications/tools/mermaid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mermaid-ui
  namespace: default
spec:
  selector:
    app: mermaid
  ports:
    - port: 8080
      name: web-ui
